--- a/static/style.css
+++ b/static/style.css
@@ -51,6 +51,15 @@ select{
     text-transform: capitalize !important;
 }
 
+button.accordion-button{
+    border: 1px solid rgb(0 0 0);
+    font-size: 1.5rem;
+    font-weight: lighter;
+    background-color: rgb(0 0 0 / 24%);
+    color: rgb(0 0 0 / 24%);
+    cursor: no-drop;
+}
+
 .entrada{
     display: flex;
     flex-direction: column;
@@ -70,7 +79,7 @@ select{
     border: none;
     color: rgb(255, 255, 255);
     width: 17rem;
-    margin: 0rem 2rem 1rem 3.5rem;
+    margin: 0rem 2rem 1rem 2.4rem;;
     font-size: 1.8rem;
     font-weight: 400;
     transition: background-color 360ms ease-in-out;
@@ -225,12 +234,13 @@ div#campo-4{
     margin:0rem;
 }
 
-.body-form .formulario .secciones .datos_inmobiliaria .estilo_form input[type="number"], select{
+.body-form .formulario .secciones .datos_inmobiliaria .estilo_form  select{
     height: 3.5rem;
     padding: 0rem 0.9rem;
     border-radius: 0.2rem;
     font-size: 1.2rem;
     border:1px solid rgb(0 0 0);
+    width: 100%;
 }
 
 /* Estilos para nuestros inputs[type=radio] */
