--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,6 @@
                         </fieldset>
                     </div>
                     
-
                     <div>
                         <fieldset>
                             <legend>Escoge los acabados que deseas tener.</legend>
@@ -161,9 +160,14 @@
                                     </div>
                                 </div>
 
+
+                                <div class="mensaje">
+                                    Debe escoger un barrio del listado para el sector escogido
+                                </div>
                             </div>
-                            
+                    
                         </fieldset>
+                        
                     </div>
 
                     <div class="listado_barrios pt-4">
@@ -194,6 +198,8 @@
                               </div>
                             </div>
                           </div>
+
+                        <input type="hidden" name="barrio" id="input_sectorBarrio" value="">
                     </div>
 
                     <div class="mapa-sectores">
