--- a/static/style.css
+++ b/static/style.css
@@ -250,13 +250,18 @@ div#campo-4{
 }
 
 .body-form .formulario .secciones .datos_inmobiliaria .listado-sectores{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
     border: 1px solid rgb(154 196 206);
     border-radius: 0.9rem;
     box-shadow: 1px 2px 10px rgb(0 0 0 / .3);
     margin-top: 8rem;
-    height: 9rem;;
+    height: 9rem;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.body-form .formulario .secciones .datos_inmobiliaria .error-sectores{
+    border: 1px solid rgb(189 43 76) !important;
+    box-shadow: 1px 2px 10px rgb(184 41 41 / 30%) !important;
 }
 
 input[type="radio"]{
