--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         </div>
         <header class="cabecera_titulo">
             <img class="cabecera_titulo--home" src="static/img/casa.png" alt="icono casa">
-            <h2 class="text-white text-center pt-3 pb-3">Inmobiliaria - Encuentra la casa de tus sueños</h2>
+            <h2 class="text-white text-center pt-3 pb-3">Inmobiliaria - Presupuesta la casa de tus sueños</h2>
         </header>
     </div>
     
