--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         </header>
     </div>
     
-    <div class="card body-form">
+    <div class="card body-form" id="regresar">
         <form method="POST" action="/buscar" class="formulario">
             <div class="secciones">
                 <div class="datos_inmobiliaria">        
