--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="static/normalize.css">
     <link rel="stylesheet" href="static/style.css">
     <title>Inmobiliaria - Buscador Inteligente</title>
 </head>
 <body>
-    <div class="bg-primary cabecera">
+    
+    <div class="bg-primary cabecera contenedor">
         <div class="bg bg-image">
             <h1 class="cabecera_heading">Encuentra <span class="typed"></span></h1>
             <div class="sombreado">
@@ -41,7 +43,7 @@
                             </div>
                         </div>
                     </div> -->
-                    <div>
+                    <div class="block-1">
                         <fieldset>
                             <legend>Cuántas habitaciones deseas en tu nuevo hogar.</legend>
                             <div class="estilo_form" id="campo-2">
@@ -65,7 +67,7 @@
                         </fieldset>
                     </div>
                     
-                    <div>
+                    <div class="block-2">
                         <fieldset>
                             <legend>Cuántos parqueaderos quieres en tu nuevo hogar.</legend>
                             <div class="estilo_form" id="campo-3">
@@ -90,7 +92,7 @@
                         </fieldset>
                     </div>
                     
-                    <div>
+                    <div class="block-3">
                         <fieldset>
                             <legend>Escoge los acabados que deseas tener.</legend>
                             <div class="estilo_form" id="campo-4">
