--- a/static/style.css
+++ b/static/style.css
@@ -3,13 +3,19 @@ html{
     box-sizing: border-box;
 }
 
+body{
+    font-size: 1.5rem;
+    font-family: 'Roboto', sans-serif;
+}
+
 *, *::before, *::after{
     box-sizing: inherit;
 }
 
-body{
-    font-size: 1.5rem;
-    font-family: 'Roboto', sans-serif;
+.contenedor{
+    max-width: 120rem;
+    width: 100%;
+    margin:0 auto;
 }
 
 table{
@@ -33,9 +39,15 @@ td{
 }
 
 legend{
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: lighter;
     padding-top: 1.5rem;
+}
+
+@media (max-width: 1215px) {
+    legend{
+        height: 6.9rem;
+    }
 }
 
 iframe{
@@ -116,6 +128,14 @@ button.accordion-button{
     top: 5rem;
 }
 
+@media (max-width:760px){
+    .cabecera .bg-image .cabecera_heading{
+        text-align: center;
+        background-color: rgba(255, 0, 0, 0.336);
+        padding-left: 10rem;
+    }
+}
+
 .cabecera .bg-image .cabecera_heading .cabecera_texto{
     font-weight: lighter;
     font-size: 2.5rem;
@@ -161,6 +181,7 @@ div#campo-4{
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
 }
+
 
 .body-form .formulario .secciones .datos_inmobiliaria #campo-1,
 .body-form .formulario .secciones .datos_inmobiliaria #campo-2,
