--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,18 @@ body{
     margin:0 auto;
 }
 
+@media (max-width: 405px) {
+    .contenedor{
+        width: 120%;
+    }
+}
+
+@media (max-width: 1600px) {
+    .contenedor{
+        max-width: none;
+    }
+}
+
 table{
     caption-side: bottom;
     border-collapse: collapse;
@@ -48,6 +60,12 @@ legend{
     legend{
         height: 6.9rem;
     }
+}
+
+@media (max-width:760px){
+    legend{
+        height: unset;
+    }  
 }
 
 iframe{
@@ -85,6 +103,12 @@ button.accordion-button{
     align-items: center;
 }
 
+@media (max-width:1032px){
+    .entrada_radio {
+        width: 100%;
+        justify-content: space-between;
+    }
+}
 
 .btn{
     background-color: #0bb4de;
@@ -124,17 +148,45 @@ button.accordion-button{
     font-weight: bold;
     letter-spacing: .2rem;
     font-size: 5rem;
-    padding-left: 44rem;
-    top: 5rem;
+    top: -1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 @media (max-width:760px){
     .cabecera .bg-image .cabecera_heading{
         text-align: center;
-        background-color: rgba(255, 0, 0, 0.336);
-        padding-left: 10rem;
+        width: 100%;
+        padding: 0.9rem 0rem 0rem 0rem;
+        top: -3.1rem;
+    }
+
+    .cabecera .bg-image .cabecera_heading span{
+        font-size:.9rem;
+        padding-top:.9rem;
+    }
+
+
+}
+
+@media (max-width:1177px){
+    .cabecera .bg-image .cabecera_heading{
+        text-align: center;
+        width: 100%;
+        padding: 0.9rem 0rem 0rem 0rem;
+        top: -3.1rem;
+    }
+
+    .cabecera .bg-image .cabecera_heading span{
+        font-size:.9rem;
+        padding-top:.9rem;
     }
 }
+
+
+
 
 .cabecera .bg-image .cabecera_heading .cabecera_texto{
     font-weight: lighter;
@@ -152,6 +204,17 @@ button.accordion-button{
     position: absolute;
     top: 13rem;
     left: 2rem;
+}
+
+@media (max-width: 564px){
+    h2.text-white.text-center.pt-3.pb-3 {
+        margin-top: 2.9rem;
+    }
+
+    .cabecera .cabecera_titulo .cabecera_titulo--home {
+        top: 14rem;
+        left: 42%;
+    }
 }
 
 
@@ -182,6 +245,11 @@ div#campo-4{
     gap: 2rem;
 }
 
+@media (max-width:1032px){
+    .body-form .formulario .secciones .datos_inmobiliaria{
+        display:unset;
+    }   
+}
 
 .body-form .formulario .secciones .datos_inmobiliaria #campo-1,
 .body-form .formulario .secciones .datos_inmobiliaria #campo-2,
@@ -280,6 +348,12 @@ div#campo-4{
     grid-template-columns: repeat(4, 1fr);
 }
 
+@media (max-width:1032px){
+    .body-form .formulario .secciones .datos_inmobiliaria .listado-sectores{
+        display: unset;
+    }   
+}
+
 .body-form .formulario .secciones .datos_inmobiliaria .error-sectores{
     border: 1px solid rgb(189 43 76) !important;
     box-shadow: 1px 2px 10px rgb(184 41 41 / 30%) !important;
@@ -364,6 +438,13 @@ div#accordionFlushExample{
     text-transform: capitalize;
 }
 
+
+@media (max-width:1032px){
+    .listado_barrios{
+        margin:0.5rem;
+    }
+}
+
 /* ALERTAS  */
 .input-error{
     border:2px solid rgb(201, 19, 19) !important;
@@ -391,12 +472,14 @@ footer{
     background-color: rgb(0 0 0);
     padding: 2rem;
     margin-top: 7rem;
+    /* height: 100vh; */
 }
 
 footer .secciones{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap:1rem;
 }
 
 footer .secciones .seccion_1{
@@ -443,6 +526,26 @@ footer .secciones .seccion_2 ul{
 footer .secciones .seccion_2 ul > li{
     background-color: white;
     border-radius: 1.9rem;
+}
+
+@media (max-width: 564px){
+    footer .secciones{
+        flex-direction: column;
+    }
+
+    footer .secciones .seccion_1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer .secciones .seccion_2{
+        align-items: center;
+    }
+
+    footer .secciones .seccion_2 ul{
+        padding: 0.9rem 0rem 0rem 0rem;
+    }
 }
 
 
