--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor">
         <div class="bg-primary cabecera">
             <div class="bg bg-image">
-                <h1 class="cabecera_heading">Encuentra <span class="typed"></span></h1>
+                <h1 class="cabecera_heading">En Inmobiliaria Encuentra <span class="typed"></span></h1>
                 <div class="sombreado">
                 </div>
             </div>
