--- a/static/style.css
+++ b/static/style.css
@@ -142,6 +142,12 @@ button.accordion-button{
     height: 17rem;
 }
 
+@media (max-width: 620px){
+    .cabecera .bg-image{
+        height: 24rem;
+    }
+}
+
 .cabecera .bg-image .cabecera_heading{
     position: absolute;
     color: rgb(255, 255, 255);
