--- a/static/buscar.css
+++ b/static/buscar.css
@@ -18,6 +18,10 @@ td{
     }
 }
 
+.inmobiliarias_busqueda {
+    padding: 3rem 0.9rem;
+}
+
 .inmobiliarias_busqueda h2.h2-1{
     padding:4rem 0rem .9rem 1rem !important;
     font-size: 3.5rem;
@@ -31,15 +35,38 @@ td{
 }
 
 .inmobiliarias_busqueda .secciones{
-    display:flex;
-    gap:1rem;
-    align-items: center;
-    margin:.5rem;
+    display: flex;
+    gap: 2rem;
+    margin: 0.5rem;
+    
 }
 
+.inmobiliarias_busqueda .box{
+    box-shadow: -1px 0px 13px rgb(0 0 0 / 38%);
+    border-radius: .9rem;
+    border: 1px solid #0000ff3b;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.inmobiliarias_busqueda .box .box_heading{
+    font-size:1.9rem;
+}
+
+.inmobiliarias_busqueda .box .btn-success{
+    background-color: rgb(14 178 238 / 98%);
+    margin-top: 0.9rem;
+}
+
+.inmobiliarias_busqueda .box .resumen ul{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
 
 .inmobiliarias_busqueda .secciones .seccion-1{
-    flex:1;
+    flex:2;
     padding: 0rem 0.4rem;
     width: 100%;
 }
@@ -50,8 +77,7 @@ td{
 }
 
 .inmobiliarias_busqueda .secciones .seccion-2{
-    flex: 0;
-    margin: 1rem;
+    flex: 1;
     border-radius: 1rem;
     padding: 0rem;
     width: 100%;
@@ -62,6 +88,15 @@ td{
     margin-bottom: 2rem !important;
 }
 
+
+
+#resumen-caja{
+    background-color: #ffbf00;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width:760px){
     .inmobiliarias_busqueda h2.h2-1{    
         font-size:2.5rem;
@@ -70,58 +105,98 @@ td{
 
     .inmobiliarias_busqueda .secciones{
         flex-direction:column;
+        align-items: center;
     }
 
-}
+    .inmobiliarias_busqueda .secciones .seccion-2{
+        margin:1rem;
+    }
 
-#resumen-caja{
-    background-color: #ffbf00;
-    padding: 1rem;
-    width: 100%;
+    #resumen-caja{
+        height: unset;
+    }
 }
 
 .d-resumen{
     display: flex;
     justify-content: space-between;
+    text-transform: capitalize;
+    margin:0rem;
+    align-items: center;
+    border-bottom: 1px solid rgb(0 0 0 / .3);
+    padding-bottom: 0.9rem;
+    font-size:1.6rem;
 }
 
 .seccion_tabla{
     margin:1.5rem;
 }
 
-
 .seccion_tabla .contenedor-inmobiliaria{
-    border: 1px solid rgb(0 0 0 / .2);
     padding: 0.9rem;
     margin:0rem !important;
+    border:none !important;
 }
 
-.seccion_tabla .listado-inmobiliarias{
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 3rem;
-    margin:1rem 0rem 0rem 0rem;
-}
-
-.seccion_tabla .listado-inmobiliarias li{
+.seccion_tabla .listado_inmobiliarias .home{
     display: flex;
-    flex-direction: column;
+    gap: 2rem;
+    border: 1px solid rgb(81 53 53 / 27%);
+    padding: 0rem;
+    align-items:flex-end;
+    border-radius: .9rem;
+    margin-bottom: 3rem;
+}
+
+.seccion_tabla .listado_inmobiliarias .home .img > img{
+    border-radius: 0.9rem 0rem 0rem 0.9rem;
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion{
+    width: 100%;
+    height: 32rem;
+    padding: 0rem 1.9rem 0rem 0rem;
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion h3{
+    text-transform: capitalize;
+    border-bottom: 1px solid rgb( 0 0 0 / 0.3);
+    font-size: 2.3rem;
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion .info .info_heading{
+    color:rgb(0 0 0 / 43%);
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion .info .info_parrafo{
+    padding-left: 2rem;
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion ol{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    margin-top: 2.5rem;
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion ol > li{
+    display: flex;
+    align-items: center;
+    gap:2rem;
+
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion ol > li > p{
+    display: flex;
+    gap:1rem;
+}
+
+.seccion_tabla .listado_inmobiliarias .home .descripcion ol > li > p > span{
+    font-weight: bold;
+}
+
+span{
+    display: flex;
+    gap: 0.9rem;
     align-items: center;
 }
-
-
-.seccion_tabla .listado-inmobiliarias li > p{
-    font-weight: bold;
-    font-size:1.5rem;
-}
-
-
-.seccion_tabla .listado-inmobiliarias li > p > span{
-    font-weight: lighter;
-}
-
-/* Estilos para nuestra tabla */
-.barrios-listado table{
-    display: none;
-}
-
