--- a/templates/index.html
+++ b/templates/index.html
@@ -223,14 +223,13 @@
     </div>
     
     
-
-    
-
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="static/scripts/letter.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="static/scripts/app.js"></script>
     <script src="static/scripts/maps.js"></script>
+    <script src="static/scripts/maps2.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwQHKWZcWbAy441Mc3w6nq5BxGtdTQMio&callback=iniciarMapa"></script>
 </body>
 </html>
