--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,14 @@
         </div>
 
         <div class="card body-form" id="regresar">
+            <div class="img_form">
+                <div class="sombreado">
+                    <div class="texto">
+                        <h2>MACHINE LEARNING</h2>
+                        <p>Los modelos de aprendizaje supervisado son capaces de aprender en base a datos proporcionados.</p>
+                    </div>
+                </div>
+            </div>
             <form method="POST" action="/buscar" class="formulario">
                 <div class="secciones">
                     <div class="datos_inmobiliaria">        
