--- a/static/style.css
+++ b/static/style.css
@@ -101,6 +101,8 @@ button.accordion-button{
     display: flex;
     gap: 1rem;
     align-items: center;
+    width: 100%;
+    justify-content: space-between;
 }
 
 @media (max-width:1032px){
@@ -351,20 +353,78 @@ div#campo-4{
 /* ----- Formulario Final ----- */
 .body-form{
     margin:1.5rem;
-    border: 1px solid #00000061;
+    width: 58rem;
+    border:none;
+    flex-direction: row;
+    width: 144rem;
+    margin: 3rem auto;
+    justify-content: space-between;
+}
+
+.body-form .img_form{
+    background-image: url(../static/img/img_form.jpeg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 68rem;
+    width: 84rem;
+    margin-top: 5.7rem;
+}
+
+.body-form .img_form .texto{
+    height: 100%;
+    color:#fff;
+}
+
+.body-form .img_form .texto h2{
+    text-align: center;
+    font-size: 6rem;
+    padding-top: 30%;
+    font-weight: 400;
+}
+
+.body-form .img_form .texto p{
+    font-family: monospace;
+    text-align: center;
+    padding-top: 6rem;
+    font-weight: bold;
+}
+
+.body-form .img_form .sombreado{
+    background-color: rgb( 0 0 0 / .4);
+    width: 100%;
+    height: 100%;
+}
+
+.body-form form{
+    box-shadow: -8px 4px 4px rgb( 0 0 0 / .3);
 }
 
 .body-form .formulario .secciones .datos_inmobiliaria{
     margin: 2rem;
+    width: 69rem;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    
 }
 
 @media (max-width:1032px){
     .body-form .formulario .secciones .datos_inmobiliaria{
         display:unset;
     }   
+}
+
+.block-1{
+    grid-column: 1 / 3;
+}
+
+.block-2{
+    grid-column: 3 / 5;
+}
+
+.block-3{
+    grid-column: 1 / 5;
 }
 
 .body-form .formulario .secciones .datos_inmobiliaria #campo-1,
@@ -451,16 +511,14 @@ div#campo-4{
 
 /* Estilos para nuestros inputs[type=radio] */
 .seccion_radios{
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
 }
 
 .body-form .formulario .secciones .datos_inmobiliaria .listado-sectores{
-    display: grid;
     border: 1px solid rgb(154 196 206);
     border-radius: 0.9rem;
     box-shadow: 1px 2px 10px rgb(0 0 0 / .3);
     margin-top: 8rem;
-    height: 9rem;
     grid-template-columns: repeat(4, 1fr);
 }
 
@@ -526,6 +584,7 @@ input[type="radio"]#sector4:checked{
     align-items: center;
     gap: 1rem;
     padding: 3rem;
+    height: 2rem;
 }
 
 .l-sector.l-sector-1{
@@ -554,6 +613,16 @@ div#accordionFlushExample{
     text-transform: capitalize;
 }
 
+.pt-4{
+    padding-top: 1.5rem!important;
+    grid-column: 3 / 5;
+    width: 100%;
+    display: none;
+}
+
+div#accordionPanelsStayOpenExample {
+    padding-top: 4rem;
+}
 
 @media (max-width:1032px){
     .listado_barrios{
