--- a/templates/index.html
+++ b/templates/index.html
@@ -195,15 +195,14 @@
                             
                         </div>
 
-                        <div class="listado_barrios pt-4">
-                            <h2 class="text-capitalize">Barrios</h2>
+                        <div class="listado_barrios pt-4" id="ocultarPanel">
                             <div class="accordion" id="accordionPanelsStayOpenExample">
                                 <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne" disabled>
                                         Barrios para sectores centro-norte y norte de Quito
                                     </button>
-                                </h2>
+                                </h2>   
                                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse">
                                     <div class="accordion-body">
                                         <table class="table table-striped">
