--- a/templates/index.html
+++ b/templates/index.html
@@ -204,7 +204,7 @@
                                     </button>
                                 </h2>   
                                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse">
-                                    <div class="accordion-body">
+                                    <div class="accordion-body" id="contenido_barrios">
                                         <table class="table table-striped">
                                             <thead>
                                                 <tr>
@@ -218,6 +218,10 @@
                                                 
                                             </tbody>
                                         </table>
+
+                                        <div class="accion">
+                                            <a href="#" class="btn btn-seleccion">confirmar selección</a>
+                                        </div>
                                     </div>
                                 </div>
                                 </div>
