--- a/templates/index.html
+++ b/templates/index.html
@@ -205,22 +205,25 @@
                                 </h2>   
                                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse">
                                     <div class="accordion-body" id="contenido_barrios">
-                                        <table class="table table-striped">
-                                            <thead>
-                                                <tr>
-                                                    <th>Identificador</th>
-                                                    <th>Nombre</th>
-                                                    <th>Sector</th>
-                                                    <th>Acción</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="cuerpo_contenido">
-                                                
-                                            </tbody>
-                                        </table>
+                                        <div class="table_contenido">
+                                            <table class="table table-striped">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Identificador</th>
+                                                        <th>Nombre</th>
+                                                        <th>Sector</th>
+                                                        <th>Acción</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody id="cuerpo_contenido">
+                                                    
+                                                </tbody>
+                                            </table>
+                                        </div>
 
                                         <div class="accion">
                                             <a href="#" class="btn btn-seleccion">confirmar selección</a>
+                                            <a href="#" class="btn btn-cancelar">cancelar</a>
                                         </div>
                                     </div>
                                 </div>
