--- a/templates/index.html
+++ b/templates/index.html
@@ -222,8 +222,8 @@
                                         </div>
 
                                         <div class="accion">
-                                            <a href="#" class="btn btn-seleccion">confirmar selección</a>
-                                            <a href="#" class="btn btn-cancelar">cancelar</a>
+                                            <a href="#" class="btn btn-seleccion" id="btnConfirmar">confirmar selección</a>
+                                            <a href="#" class="btn btn-cancelar" id="btnCancelar">cancelar</a>
                                         </div>
                                     </div>
                                 </div>
