--- a/static/buscar.css
+++ b/static/buscar.css
@@ -62,6 +62,23 @@ td{
     border-radius: 2.9rem;
     box-shadow: 1px 1px 8px rgb( 0 0 0 / .2);
     padding: 2rem;
+    font-family:roboto;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info > h2{
+    font-weight: 300;
+    font-size:1.5rem;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--header > p{
+    font-weight: 200;
+    font-size:1.2rem;
 }
 
 .inmobiliarias_busqueda h2.h2-1{
@@ -266,4 +283,9 @@ span{
 .mensaje_alterno p{
     font-size:2.5rem;
     font-weight: lighter;
+}
+
+/* footer */
+.buscar footer{
+    margin:0rem;
 }
