--- a/static/buscar.css
+++ b/static/buscar.css
@@ -55,10 +55,20 @@ td{
 }
 
 .inmobiliarias_busqueda .listado_casas_info{
+    height: 65rem;
+    overflow: auto;
+    width: 85rem;
+    padding: .9rem;
+}
+
+.inmobiliarias_busqueda .listado_casas_info::-webkit-scrollbar:vertical {
+    width: .5rem;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info{
     margin: 0 auto;
     width: 100%;
     display: inherit;
-    height: 100%;
     border-radius: 2.9rem;
     box-shadow: 1px 1px 8px rgb( 0 0 0 / .2);
     padding: 2rem;
@@ -69,6 +79,7 @@ td{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-bottom: 2rem;
 }
 
 .inmobiliarias_busqueda .listado_casas_info section.casa_info > h2{
@@ -76,17 +87,85 @@ td{
     font-size:1.5rem;
 }
 
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--header h2{
+    color:#1c87dcc2;
+}
+
 .inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--header > p{
     font-weight: 200;
     font-size:1.2rem;
 }
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body {
+    display:flex;
+    gap:1rem;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body p{
+    font-weight: 200;
+    font-size:1.2rem;
+    font-family: monospace;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion1 ol{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: .5rem;
+    padding: 0rem;
+    margin: 0rem;
+    font-family: roboto;
+    column-gap: 1rem;
+    align-items: end;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion1 ol > li,
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion2 > ol > li {
+    border-bottom: 1px solid rgb( 0 0 0 / .2);
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion1 ol > li > p,
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion2 > ol > li > p{
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    text-align: right;
+    align-items: center;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion1 ol > li > p,
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion2 > ol > li > p{
+    font-family: roboto;
+    font-weight: bold;
+    color:#1c87dcc2;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion1 ol > li > p span,
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body div.seccion2 > ol > li > p span{
+    font-weight: 300;
+    color:rgb( 0 0 0 );
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body .seccion1{
+    width: 75rem;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body .seccion2{
+    display: flex;
+    flex-direction: column;
+    gap:1.5rem;
+}
+
+.inmobiliarias_busqueda .listado_casas_info section.casa_info div.casa_info--body .seccion2 > ol{
+    padding:0rem;
+    margin:0rem;
+}
+
 
 .inmobiliarias_busqueda h2.h2-1{
     padding:4rem 0rem .9rem 1rem !important;
     font-size: 3.5rem;
     text-transform: capitalize;
 }
-
 
 .inmobiliarias_busqueda h2.tl{
     font-size:3.5rem;
