--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,9 @@
             <div class="bg bg-image">
                 <h1 class="cabecera_heading">En Inmobiliaria Encuentra <span class="typed"></span></h1>
                 <div class="sombreado">
+                    <nav class="navegacion">
+                        <a href="/">Inicio</a>
+                    </nav>
                 </div>
             </div>
             <header class="cabecera_titulo">
